# CodexVideos

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  yaml.py
.github/workflows/: ci.yml  deploy-webui.yml  export-release.yml  manual-generate.yml  scheduled-qc.yml
app/adapters/: model_adapter.py
app/api/: main.py
app/cli/: __main__.py
app/core/: config_loader.py  exporter.py  qc_engine.py  template_engine.py
app/schemas/: config.py
app/services/: export_service.py  project_service.py  qc_service.py  run_service.py  template_service.py
app/utils/: logger.py  paths.py  security.py
configs/: app.yaml  models.yaml  qc_rules.yaml
configs/jobs/: generate_episode.yaml  generate_outline.yaml  qc_project.yaml
projects/demo_project/: meta.json  sample_script.md
templates/drama/: episode_prompt.md  outline_prompt.md
templates/qc/: qc_prompt.md
tests/: test_api_webui.py  test_cli.py  test_qc_engine.py  test_run_service.py  test_template_engine.py
web/: .env.example  README.md  package-lock.json  package.json
web/scripts/: build.mjs  dev.mjs  preview.mjs
web/src/: app.js  config.js  index.html  styles.css
